--- a/src/sass/partials/_elements.scss
+++ b/src/sass/partials/_elements.scss
@@ -34,6 +34,11 @@ input, select {
   border: 1px solid $color-dark;
   border-radius: $radius;
   padding: $base-size;
+
+  &.error {
+    border-color: $color-main;
+  }
+
 }
 
 .checkbox {
